--- a/test-program/Makefile
+++ b/test-program/Makefile
@@ -61,3 +61,13 @@ clean:
 
 #make 如何追踪当前正在编译的目录: make -w or --print-directory.
 
+#几种赋值符号：
+#	“=”是最普通的等号，在make时，会把整个makefile展开，最后才决定变量的最后值
+#	”:=”就表示直接赋值，赋予当前位置的值。”:=”才是真正意义上的直接赋值
+#	“？=”表示如果该变量没有被赋值，则赋予等号后的值
+
+
+#几种特殊推导扩展符号：
+#	$@ 代表目标
+#	$^ 代表所有的依赖对象
+#	$< 代表第一个依赖对象
