常用变量的使用.

--- a/test-program/Makefile
+++ b/test-program/Makefile
@@ -34,7 +34,7 @@
 # 	cc -c $*.c
 
 
-# .PHONY: clean
+.PHONY: clean
 # clean:
 # 	-rm $(PROGRAM) $(objs)
 
@@ -45,11 +45,7 @@ PROGRAM=test
 
 src := $(wildcard *.c)
 
-%.o: 
 
-clean:
-	echo $(src)
-	echo "$vpath"
 
 #gcc -MM main.c  自动生成头文件的依赖关系.
 
@@ -67,20 +63,52 @@ clean:
 #	“？=”表示如果该变量没有被赋值，则赋予等号后的值
 
 
-#几种特殊推导扩展符号：
+#几种特殊推导扩展符号，或者叫自动化变量：
 #	$@ 代表目标
 #	$^ 代表所有的依赖对象
 #	$< 代表第一个依赖对象
 
 
 #定义命令包（类似自定义函数）
+#它的每个语句必须都是命令，而不能是一些变量定义。
 define my-test
 pwd
-ls -al $@
+ls -al
 endef
 
+#变量测试
+define my-val
+	@echo "make level: "${MAKELEVEL}
+   ls -al $(shell pwd)
+   #${MAKE} host-type=$(shell arch) whoami=$(shell whoami)
+endef
 
+#替换变量集合里面的结尾字符，如下把src集合里面的结尾为.c的字符串替换成.o字符串。
+objs := $(src:.c=.o)
+#静态模式替换变量的结尾字符：
+objs2 := $(src:%.c=%.o)
+
+#高级变量应用：
+first_second = hello
+a = first
+b = sencond
+all = $($(a)_$(b))  #$(all) 就是 hello.
+
+
+al := 1
+a_objs := a.o b.o c.o
+1_objs := 1.o 2.o 3.o
+
+source := $($(al)_objs:.o=.c)   #这里会使用1_objs.
+
+#环境变量：如CFLAGS,这个时寡欲编译的参数的环境变量
+#如果makefile中没有定义，那就使用整个环境变量里面的整个CFLAGS; 如果makefile中定义了，那就使用makefile中的。
 
 clean:
 	echo $(src)
 	$(my-test)
+	@echo ${src}
+	${my-val}
+	@echo ${objs}
+	@echo ${objs2}
+	@echo $(source)
