--- a/test-program/Makefile
+++ b/test-program/Makefile
@@ -68,6 +68,7 @@
 # #	$^ 代表所有的依赖对象
 # #	$< 代表第一个依赖对象
 # # $? 所有比目标新的依赖目标的集合
+# # $* 不包含扩展名的目标文件
 
 
 # #定义命令包（类似自定义函数）
@@ -157,6 +158,7 @@
 # clean:
 # 	rm -f $(objs) $(deps) $(PROGRAM)
 
+# -include $(deps)
 
 
 
