--- a/library-prjs/libCom/Makefile
+++ b/library-prjs/libCom/Makefile
@@ -8,7 +8,7 @@ PROJECT_TARGET := $(TARGET_PREFIX).so
 PROJECT_MAP := $(TARGET_PREFIX).map
 PROJECT_DES_PATH := $(LIB_SHARE_PATH)
 
-
+#compile option:
 #append the complain used resource.
 PROJECT_IFLAGS = $(IFLAGS) -I./include
 PROJECT_CFLAGS = $(CFLAGS) -fPIC
@@ -23,7 +23,7 @@ PROJECT_DEPENDS =$(patsubst %.c,%.o,$(PROJECT_SRC))
 
 #start buidl steps:
 all:$(PROJECT_TARGET)
-	@echo -e "INSTALL - $(PROJECT_TARGET)\nINSTALL - $(PROJECT_MAP)"
+	@echo -e "INSTALL --->$(PROJECT_TARGET)<--- to $(PROJECT_INSTALL_PATH)"
 	@mkdir -p $(PROJECT_DES_PATH)
 	@cp -f $(PROJECT_TARGET) $(PROJECT_DES_PATH)
 	@mkdir -p $(MAP_FILE_PATH)
@@ -34,15 +34,16 @@ $(PROJECT_TARGET):$(PROJECT_DEPENDS)
 	@echo -e "Buidling target -- $@"
 	@echo $(notdir $(basename $@))
 	$(CC) -o $@ $^ $(PROJECT_LDFLAGS)
-
+	$(STRIP) -s $(PROJECT_TARGET)
 %.o:%.c
 	@echo -e "Complain the Obj -- $@"
 	$(CC) $(PROJECT_CFLAGS)  $(PROJECT_IFLAGS) -c -o $@ $<
 
+.PHONY:clean
 clean:
-	@echo "Clean $(PROJECT_TARGET)"
-	@find ./ \( -name "*.o" -o -name "*.d" \) -exec rm -f '{}' \;
-	@rm -f $(PROJECT_MAP) $(PROJECT_TARGET)
+	@rm -rf $(PROJECT_DEPENDS)
+	@find ./ \( -name "*.o" -o -name "*.d" \) -exec rm -rf '{}' \;
+	@rm -rf $(PROJECT_MAP) $(PROJECT_TARGET)
 
 
 -include $(PROJECT_DEPEND:.o=.d)
